# tokenizator

./: .gitignore  Cargo.toml  Makefile  README.md  pyproject.toml
.github/workflows/: build-and-deploy.yml
src/: lib.rs  python.rs
tests/: test_python_interface.py
