[package]
name = "tokenizator"
version = "0.1.4"
edition = "2024"

[lib]
name = "tokenizator"
crate-type = ["cdylib"]

[dependencies]
candle-core = "0.9.1"
candle-nn = "0.9.1"
candle-transformers = "0.9.1"
tokenizers = { version = "0.21.1", default-features = false }
kodama = "0.3.0"
rayon = "1.10.0"
pyo3 = { version = "0.25.1", optional = true, features = ["extension-module"] }
ndarray = { version = "0.16.1", optional = true }
numpy = { version = "0.25.0", optional = true }
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
safetensors = "0.6.0"
thiserror = "2.0.12"
anyhow = "1.0.98"
hf-hub = { version = "0.4.3", optional = true, default-features = false, features = [
    "ureq",
    "rustls-tls",
] }

[features]
default = ["python", "tokenizers/onig", "hf-hub"]
python = ["pyo3", "ndarray", "numpy"]
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
mkl = ["candle-core/mkl", "candle-nn/mkl", "candle-transformers/mkl"]
accelerate = [
    "candle-core/accelerate",
    "candle-nn/accelerate",
    "candle-transformers/accelerate",
]

[profile.release]
opt-level = 2
lto = true
